final polish
